# finance-manager

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
resources/: app.desktop.in  resources.gresource.xml.in  styles.css
resources/templates/: app.desktop.template  flatpak.yml.template  gresources.xml.template  installer.iss.template  metainfo.xml.template
src/: app.rs  main.rs  metadata.rs  prelude.rs
src/context/: action.rs  data_directory.rs  data_file.rs  mod.rs
src/data/: balance.rs  currency.rs  cycle.rs  mod.rs  period.rs  transaction.rs  wallet.rs
src/pages/: mod.rs  navigation_page.rs
src/pages/overview/: balance_row.rs  header_row.rs  mod.rs  wallet_group.rs
src/pages/status/: buttons.rs  mod.rs
src/pages/transaction/: cycle_selector.rs  date_range_picker.rs  mod.rs
src/pages/wallet/: currency_selector.rs  mod.rs  transaction_row.rs
src/utils/: alert_button.rs  button_list.rs  mod.rs  popover_extension.rs  scrollable_pane.rs
src/window/: about_dialog.rs  alert_dialog.rs  file_dialog.rs  mod.rs  notifications.rs
