[package]
name = "finance-manager"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Tiago Marques <tyimarques@gmail.com>"]
homepage = "https://github.com/timarques/finance-manager"
description = "A desktop application for managing personal finances, built with Rust and GTK."

build = "build.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9.3", features = ["v4_16"] }
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_6"] }
serde_json = "1.0.132"
serde = { version = "1.0.211", default-features = false, features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock", "serde"] }
ureq = { version = "2.10.1", default-features = false, features = ["tls"] }

[build-dependencies]
glib-build-tools = "0.20"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
